--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "readmeFilename": "README.md",
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-connect": "~0.3.0"
+    "grunt-contrib-connect": "~0.3.0",
+    "grunt-regarde": "~0.1.1",
+    "grunt-contrib-livereload": "~0.1.2"
   }
 }
