--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/t93/bb.git"
+  },
   "author": "t93",
   "license": "MIT",
   "readmeFilename": "README.md",
@@ -15,5 +18,12 @@
     "grunt-contrib-connect": "~0.3.0",
     "grunt-regarde": "~0.1.1",
     "grunt-contrib-livereload": "~0.1.2"
+  },
+  "gitHead": "2c508848dc48888fe85f09b657777e0bd4b2a12d",
+  "dependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-connect": "~0.3.0",
+    "grunt-contrib-livereload": "~0.1.2",
+    "grunt-regarde": "~0.1.1"
   }
 }
