--- a/bower.json
+++ b/bower.json
@@ -6,5 +6,13 @@
     "jquery": "~2.0.3",
     "lodash": "~1.3.1",
     "handlebars": "~1.0.0"
+  },
+  "devDependencies": {
+    "backbone": "~1.0.0",
+    "jquery": "~2.0.3",
+    "lodash": "~1.3.1",
+    "handlebars": "~1.0.0",
+    "requirejs": "~2.1.8",
+    "hogan": "~3.0.0"
   }
 }
