--- a/package.json
+++ b/package.json
@@ -17,13 +17,8 @@
     "grunt": "~0.4.1",
     "grunt-contrib-connect": "~0.3.0",
     "grunt-regarde": "~0.1.1",
-    "grunt-contrib-livereload": "~0.1.2"
-  },
-  "gitHead": "2c508848dc48888fe85f09b657777e0bd4b2a12d",
-  "dependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-livereload": "~0.1.2",
-    "grunt-regarde": "~0.1.1"
-  }
+    "bower": "~1.0.0"
+  },
+  "gitHead": "2c508848dc48888fe85f09b657777e0bd4b2a12d"
 }
